// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/IconButton Clicked 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c2 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  color: #6D6E70;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #6D6E70;
}

.c1:hover {
  background-color: #6D6E70;
  color: #FFF;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

@media screen and (max-width:767px) {
  .c1 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
      data-testid="primary-icon-button"
    >
      <span
        className="c2"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h23.795v23.795H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
              fill="currentColor"
            />
            <g
              transform="translate(13.308 1)"
            >
              <path
                d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/IconButton Light 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c2 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  color: #FFF;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #FFF;
}

.c1:hover {
  background-color: #FFF;
  color: #252525;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c0 {
  padding: 1rem;
  background-color: #252525;
}

@media screen and (max-width:767px) {
  .c1 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
    >
      <span
        className="c2"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/IconButton Naked 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c2 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  color: #6D6E70;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 30px;
  height: 30px;
  border: none;
}

.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
    >
      <span
        className="c2"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/IconButton Primary 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c2 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  color: #6D6E70;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #6D6E70;
}

.c1:hover {
  background-color: #6D6E70;
  color: #FFF;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

@media screen and (max-width:767px) {
  .c1 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
      data-testid="primary-icon-button"
    >
      <span
        className="c2"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h23.795v23.795H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
              fill="currentColor"
            />
            <g
              transform="translate(13.308 1)"
            >
              <path
                d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/IconButton Primary Inverted 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c2 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  color: #FFF;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #FFF;
}

.c1:hover {
  background-color: #FFF;
  color: #6D6E70;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

@media screen and (max-width:767px) {
  .c1 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
    >
      <span
        className="c2"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;
